# codereview-openrouter-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  PERSONAS.md  README.md  pyproject.toml
codereview_mcp/: client.py  config.py  git_ops.py  models.py  prompts.py  secrets.py  server.py
codereview_openrouter_mcp/: client.py  config.py  context_files.py  git_ops.py  logging.py  models.py  prompts.py  secrets.py  server.py
planreview_openrouter_mcp/: client.py  config.py  context_files.py  logging.py  prompts.py  secrets.py  server.py
tests/: conftest.py  test_client.py  test_context_files.py  test_git_ops.py  test_logging.py  test_personas.py  test_secrets.py  test_server.py
